--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Let's try some JavaScript</h2>
+    <p id="radius">Value provided by the user</p>
+    <p id="result">Show area or Error</p>
+
+    <!-- <ul class="shopping">Remember to buy:</ul> -->
 </body>
 </html>
